# FractalVis

./: FractalVis.sln  README.md
FractalVisGUI/: App.xaml  App.xaml.cs  FFI.cs  FractalVisGUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  TextBoxOutputter.cs  Visualization.cs
FractalVisGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs
fractals/: Cargo.toml
fractals/src/: ffi.rs  lib.rs  mandelbrot.rs  newton.rs  polynomial.rs  structs.rs  utils.rs  visualization.rs
