[package]
authors = ["RundownRhino <52856631+RundownRhino@users.noreply.github.com>"]
edition = "2018"
name = "fractals"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "fractal_calculator"

[dependencies]
image = "0.23.14"
ndarray = {version = "0.15.1", features = ["rayon"]}
num-complex = "0.4.0"
palette = "0.5.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = true
